--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
 <div id="button-area" class="widget">
 	<button type="button" id="switch">Switch to Live Data</button>
-</div>
+</div> <!-- button-area -->
 
 <!-- NWS watch -->
 <div id="nws">
