added a top level comment about who wrote the code

--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!--
 	Thomas Wible Interview Site
+	
+	this code was written by me, except where noted for the script to run jQuery UI
 -->
 
 <!DOCTYPE html>
