added libraries comment

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 	Thomas Wible Interview Site
 	
 	this code was written by me, except where noted for the script to run jQuery UI
+	libraries used: Esri Javascript API, jQuery, jQuery UI
 -->
 
 <!DOCTYPE html>
