--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 	<button type="button" id="switch">Switch to Live Data</button>
 </div> <!-- button-area -->
 
-<!-- NWS watch -->
+<!-- NWS watch, text pulled from NWS LWX WFO -->
 <div id="nws">
 	<h2>From the National Weather Service Sterling, VA Weather Forecast Office</h2>
 	
@@ -117,7 +117,7 @@
 	<p>For more information visit <a href="https://www.weather.gov/lwx/" target="_blank">NWS Sterling WFO</a></p>
 </div> <!-- nws -->
 
-<!-- DHS preparedness -->
+<!-- DHS preparedness, text pulled from ready.gov -->
 <div id="preparedness">
 	<h2>From the Department of Homeland Security</h2>
 	<p>When a hurricane is 36 hours from arriving
